--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
 //    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 //    implementation "androidx.cardview:cardview:1.0.0"
 //    implementation 'com.github.bumptech.glide:glide:4.11.0'
