--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="br.com.pdasolucoes.standardconfig">
+
 
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,19 +22,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-<!--        <activity android:name=".SplashActivity">-->
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+<!--        <activity android:name=".MainActivity">-->
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
 <!--        </activity>-->
-<!--        <activity android:name=".LoginActivity"/>-->
-<!--        <activity android:name=".ConfigurationActivity" />-->
-<!--        <activity-->
-<!--            android:name=".SistemaActivity"-->
-<!--            android:label="Home" />-->
-<!--        <activity android:name=".SettingsActivity" />-->
 
         <provider
             android:name="androidx.core.content.FileProvider"
