--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,16 @@ apply plugin: 'com.android.library'
 //apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    defaultConfig {
+        compileSdk 30
+    }
+
+
     defaultConfig {
         useLibrary 'org.apache.http.legacy'
         //applicationId "br.com.pdasolucoes.standardconfig"
         minSdkVersion 15
-        targetSdkVersion 30
+        targetSdkVersion 34
 //        versionCode 1
 //        versionName "1.0.23"
         multiDexEnabled true
