--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,12 @@ apply plugin: 'com.android.library'
 //apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 34
     defaultConfig {
         useLibrary 'org.apache.http.legacy'
         //applicationId "br.com.pdasolucoes.standardconfig"
-        minSdkVersion 15
-        targetSdkVersion 30
+        minSdkVersion 24
+        targetSdkVersion 34
 //        versionCode 1
 //        versionName "1.0.23"
         multiDexEnabled true
@@ -33,10 +32,10 @@ dependencies {
     implementation 'com.github.MdFarhanRaja:SearchableSpinner:1.9'
     implementation files('libs/ksoap2-android-assembly-3.5.0-jar-with-dependencies.jar')
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    compileOnly 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
 //    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 //    implementation "androidx.cardview:cardview:1.0.0"
 //    implementation 'com.github.bumptech.glide:glide:4.11.0'
