--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
-//apply plugin: 'com.android.library'
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
+//apply plugin: 'com.android.application'
 
 android {
     namespace 'br.com.pdasolucoes.standardconfig'
@@ -9,8 +9,8 @@ android {
         //applicationId "br.com.pdasolucoes.standardconfig"
         minSdkVersion 21
         targetSdkVersion 34
-        versionCode 1
-        versionName "1.0.23"
+//        versionCode 1
+//        versionName "1.0.140"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
