--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.library'
 //apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 34
+    compileSdk 35
     namespace 'br.com.pdasolucoes.standardconfig'
     defaultConfig {
         useLibrary 'org.apache.http.legacy'
         //applicationId "br.com.pdasolucoes.standardconfig"
         minSdkVersion 24
-        targetSdkVersion 34
+        targetSdkVersion 35
 //        versionCode 1
 //        versionName "1.0.23"
         multiDexEnabled true
@@ -19,6 +19,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
